--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ os:
   - linux
   - osx
 
+dist: xenial
+
 git:
   depth: 1
 
@@ -48,7 +50,7 @@ cache:
   directories:
   - "$HOME/.npm"
 
-after_success:
+before_deploy:
 - if [[ "$TRAVIS_OS_NAME" == "linux" && -n "$TRAVIS_TAG" ]]; then
     cd linux;
     openssl aes-256-cbc -K $encrypted_6866d25ad40b_key -iv $encrypted_6866d25ad40b_iv -in sig/headset_priv.asc.enc -out headset_priv.asc -d;
